Blender crashes when changin image source to Movie #64867

Closed
opened 2019-05-20 11:30:29 +02:00 by Sebastian Koenig · 7 comments

System Information
Operating system: Linux-4.4.0-146-generic-x86_64-with-debian-stretch-sid 64 Bits
Graphics card: GeForce GTX 1080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 418.56

Blender Version
Broken: version: 2.80 (sub 70), branch: master, commit date: 2019-05-20 08:52, hash: bb88485a16
Worked: (optional)

Short description of error
If you change the image source to Movie in the Image panel, Blender crashes

Exact steps for others to reproduce the error
Open this file:
image_source_crash.blend
Try to change the image source from Generated to Movie. Crashes evey time for me.

**System Information** Operating system: Linux-4.4.0-146-generic-x86_64-with-debian-stretch-sid 64 Bits Graphics card: GeForce GTX 1080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 418.56 **Blender Version** Broken: version: 2.80 (sub 70), branch: master, commit date: 2019-05-20 08:52, hash: `bb88485a16` Worked: (optional) **Short description of error** If you change the image source to Movie in the Image panel, Blender crashes **Exact steps for others to reproduce the error** Open this file: [image_source_crash.blend](https://archive.blender.org/developer/F7050303/image_source_crash.blend) Try to change the image source from Generated to Movie. Crashes evey time for me.
Author
Member

Added subscriber: @sebastian_k

Added subscriber: @sebastian_k
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Confirmed, checking...

Confirmed, checking...

Added subscriber: @Gvgeo-1

Added subscriber: @Gvgeo-1
 	blender.exe!IMB_anim_open_index(anim * anim, IMB_Timecode_Type tc) Line 1314	C
 	blender.exe!IMB_anim_get_duration(anim * anim, IMB_Timecode_Type tc) Line 1403	C
>	blender.exe!uiTemplateImageInfo(uiLayout * layout, bContext * C, Image * ima, ImageUser * iuser) Line 1256	C

 	blender.exe!uiTemplateImage(uiLayout * layout, bContext * C, PointerRNA * ptr, const unsigned char * propname, PointerRNA * userptr, bool compact, bool multiview) Line 927	C
 	blender.exe!UILayout_template_image_call(bContext * C, ReportList * reports, PointerRNA * _ptr, ParameterList * _parms) Line 3060	C
 	blender.exe!RNA_function_call(bContext * C, ReportList * reports, PointerRNA * ptr, FunctionRNA * func, ParameterList * parms) Line 7417	C
 	blender.exe!pyrna_func_call(BPy_FunctionRNA * self, _object * args, _object * kw) Line 6102	C
 	[External Code]	
 	blender.exe!bpy_class_call(bContext * C, PointerRNA * ptr, FunctionRNA * func, ParameterList * parms) Line 8276	C
 	blender.exe!panel_draw(const bContext * C, Panel * pnl) Line 143	C
 	blender.exe!ed_panel_draw(const bContext * C, ScrArea * sa, ARegion * ar, ListBase * lb, PanelType * pt, Panel * panel, int w, int em, bool vertical) Line 2273	C
 	blender.exe!ED_region_panels_layout_ex(const bContext * C, ARegion * ar, ListBase * paneltypes, const unsigned char * * contexts, int contextnr, const bool vertical, const unsigned char * category_override) Line 2429	C
 	blender.exe!image_buttons_region_layout(const bContext * C, ARegion * ar) Line 767	C
 	blender.exe!ED_region_do_layout(bContext * C, ARegion * ar) Line 534	C
 	blender.exe!wm_draw_window_offscreen(bContext * C, wmWindow * win, bool stereo) Line 556	C
 	blender.exe!wm_draw_window(bContext * C, wmWindow * win) Line 735	C
 	blender.exe!wm_draw_update(bContext * C) Line 897	C
 	blender.exe!WM_main(bContext * C) Line 424	C
 	blender.exe!main(int argc, const unsigned char * * UNUSED_argv_c) Line 502	C
 	[External Code]	

Crash in IMB_anim_open_index

if (anim->curr_idx[i]) {     <-----Crash
  return anim->curr_idx[i];
}

uiTemplateImageInfo sends anim NULL

  if (ima->source == IMA_SRC_MOVIE && BKE_image_has_anim(ima)) {
    duration = IMB_anim_get_duration(((ImageAnim *)ima->anims.first)->anim, IMB_TC_RECORD_RUN);
  }
``` blender.exe!IMB_anim_open_index(anim * anim, IMB_Timecode_Type tc) Line 1314 C blender.exe!IMB_anim_get_duration(anim * anim, IMB_Timecode_Type tc) Line 1403 C > blender.exe!uiTemplateImageInfo(uiLayout * layout, bContext * C, Image * ima, ImageUser * iuser) Line 1256 C blender.exe!uiTemplateImage(uiLayout * layout, bContext * C, PointerRNA * ptr, const unsigned char * propname, PointerRNA * userptr, bool compact, bool multiview) Line 927 C blender.exe!UILayout_template_image_call(bContext * C, ReportList * reports, PointerRNA * _ptr, ParameterList * _parms) Line 3060 C blender.exe!RNA_function_call(bContext * C, ReportList * reports, PointerRNA * ptr, FunctionRNA * func, ParameterList * parms) Line 7417 C blender.exe!pyrna_func_call(BPy_FunctionRNA * self, _object * args, _object * kw) Line 6102 C [External Code] blender.exe!bpy_class_call(bContext * C, PointerRNA * ptr, FunctionRNA * func, ParameterList * parms) Line 8276 C blender.exe!panel_draw(const bContext * C, Panel * pnl) Line 143 C blender.exe!ed_panel_draw(const bContext * C, ScrArea * sa, ARegion * ar, ListBase * lb, PanelType * pt, Panel * panel, int w, int em, bool vertical) Line 2273 C blender.exe!ED_region_panels_layout_ex(const bContext * C, ARegion * ar, ListBase * paneltypes, const unsigned char * * contexts, int contextnr, const bool vertical, const unsigned char * category_override) Line 2429 C blender.exe!image_buttons_region_layout(const bContext * C, ARegion * ar) Line 767 C blender.exe!ED_region_do_layout(bContext * C, ARegion * ar) Line 534 C blender.exe!wm_draw_window_offscreen(bContext * C, wmWindow * win, bool stereo) Line 556 C blender.exe!wm_draw_window(bContext * C, wmWindow * win) Line 735 C blender.exe!wm_draw_update(bContext * C) Line 897 C blender.exe!WM_main(bContext * C) Line 424 C blender.exe!main(int argc, const unsigned char * * UNUSED_argv_c) Line 502 C [External Code] ``` Crash in `IMB_anim_open_index` ``` if (anim->curr_idx[i]) { <-----Crash return anim->curr_idx[i]; } ``` `uiTemplateImageInfo` sends anim NULL ``` if (ima->source == IMA_SRC_MOVIE && BKE_image_has_anim(ima)) { duration = IMB_anim_get_duration(((ImageAnim *)ima->anims.first)->anim, IMB_TC_RECORD_RUN); }

This issue was referenced by bfe7fdedfc

This issue was referenced by bfe7fdedfc3b67fcdfcc962fee7fbe59a9c34458
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#64867
No description provided.